# snitch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.json  logger.py  main.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
snitch/: logger.py  main.py
snitch/parsers/: config_parser.py  openapi_parser.py  parser_exceptions.py  postman_parser.py  request_model.py
snitch/scripts/: generate_config_json_template.py
snitch/task_runners/: health_check.py  idempotency_check.py  report_builder.py  task.py
src/parsers/: config_parser.py  postman_parser.py
src/snitch/: exceptions.py  logger.py  main.py  requests.py  requirements.txt  typed.py
src/snitch/parsers/: config_parser.py  openapi_parser.py  parser_exceptions.py  postman_parser.py  request_model.py
src/snitch/scripts/: generate_config_json_template.py
src/snitch/task_runners/: health_check.py  idempotency_check.py  report_builder.py  report_writer.py  task.py
src/snitch/tests/: test_config_parser.py  test_parser_exceptions.py  test_postman_collection.py  test_request_model.py
src/task_runners/: health_check.py
tests/: test_config_parser.py  test_health_check.py  test_idempotency_check.py  test_openapi.py  test_parser_exceptions.py  test_postman_collection.py  test_report_builder.py  test_request_model.py  test_task.py
